Checkpoint work on lit review

--- a/aber/software-engineering/lit-review/references.bib
+++ b/aber/software-engineering/lit-review/references.bib
@@ -426,3 +426,23 @@
   year={2010},
   institution={University of California}
 }
+
+@article{jonikas2009coarse,
+  title={Coarse-grained modeling of large RNA molecules with knowledge-based potentials and structural filters},
+  author={Jonikas, Magdalena A and Radmer, Randall J and Laederach, Alain and Das, Rhiju and Pearlman, Samuel and Herschlag, Daniel and Altman, Russ B},
+  journal={Rna},
+  volume={15},
+  number={2},
+  pages={189--199},
+  year={2009},
+  publisher={Cold Spring Harbor Lab}
+}
+
+@incollection{rother2012template,
+  title={Template-based and template-free modeling of RNA 3D structure: Inspirations from protein structure modeling},
+  author={Rother, Kristian and Rother, Magdalena and Boniecki, Micha{\l} and Puton, Tomasz and Tomala, Konrad and {\L}ukasz, Pawe{\l} and Bujnicki, Janusz M},
+  booktitle={RNA 3D structure analysis and prediction},
+  pages={67--90},
+  year={2012},
+  publisher={Springer}
+}
